--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "bootstrap": "^5.3.8",
-    "sal.js": "^0.8.5"
+    "bootstrap": "^5.3.8"
   }
 }
